# egor

./: Cargo.toml
crates/egor_app/: Cargo.toml
crates/egor_app/src/: input.rs  lib.rs
crates/egor_glue/: Cargo.toml
crates/egor_glue/src/: app.rs  color.rs  graphics.rs  lib.rs  primitives.rs  profiling.rs  text.rs
crates/egor_render/: Cargo.toml  outline_shader.wgsl  shader.wgsl
crates/egor_render/examples/: triangle.rs
crates/egor_render/src/: batch.rs  frame.rs  instance.rs  lib.rs  pipeline.rs  target.rs  texture.rs  uniforms.rs
demos/agar/: Cargo.toml
demos/agar/src/: main.rs
demos/desk_fan/src/: main.rs
demos/ferrismark/src/: main.rs
demos/health_bar/src/: main.rs
demos/hot_postfx/src/: main.rs
demos/multi_touch/src/: lib.rs
demos/secs_particles/src/: lib.rs  lightning.rs
demos/shooter/: Cargo.toml
demos/shooter/src/: main.rs  tilemap.rs
src/: lib.rs
xtask/src/: main.rs
