[package]
name = "egor_glue"
version = "0.10.0"
edition = "2024"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
description = "High-level wrappers around low-level egor crates"
license = "MIT"
repository = "https://github.com/wick3dr0se/egor"
keywords = ["egor"]

[features]
default = []
hot_reload = ["dep:dioxus-devtools"]
profiling = ["dep:puffin", "dep:puffin_http", "dep:profiling", "profiling/profile-with-puffin"]

[dependencies]
egor_app = { version = "0.10.0", path = "../egor_app" }
egor_render = { version = "0.10.0", path = "../egor_render" }

web-time = "1.1.0"
color = "0.3.1"
glam = "0.30.4"
glyphon = "0.11.0"
lyon = { version = "1.0.16" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-devtools = { version = "0.7.0-alpha.1", optional = true }
puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }
profiling = { version = "1", optional = true, default-features = false }
